@@ -179,3 +179,7 @@ iDEAL/Rabobank Gateway (January 10, 2011)
 * Original code by Soemirno Kartosoewito
 * Refactored by Cody Fauser
 * Refactored and updated by Jonathan Rudenberg
+
+Quantum Gateway
+
+* Joshua Lippiner
