@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Add QuantumGateway [Joshua Lippiner]
 * SagePayForm: Added send_email_confirmation (default false) to enable confirmation emails [wisq]
 
 == Version 1.9.4 (Jan 5, 2011)
